# WindTurbine-SystemC

./: .gitignore  CMakeLists.txt
dataset/: one_day_sun.txt  one_day_wind.txt
include/: aerodynamic.hpp  battery.hpp  battery_char.hpp  battery_converter.hpp  battery_fre.hpp  battery_voc.hpp  city_power_grid.hpp  cti_bus.hpp  defines.hpp  environment.h  environment.hpp  generator.hpp  generator_Te.hpp  generator_eq.hpp  generator_lsf.hpp  house.hpp  house1.h  house1.hpp  house2.h  house2.hpp  house5.h  house5.hpp  imperial_defs.hpp  mechanical.hpp  mechanical_delay.hpp  mechanical_lsf.h  mechanical_lsf.hpp  mechanical_tdf.hpp  pv_converter.hpp  pv_panel.hpp  turbine.hpp  wind_inverter.hpp  wind_turbine.hpp
include/battery/: battery.hpp  battery_char.hpp  battery_fre.hpp  battery_voc.hpp
include/photo_voltaic/: pv_converter.hpp  pv_panel.hpp
include/wind_turbine/: turbine.hpp  wind.hpp  wind_turbine.hpp
include/wind_turbine/aerodynamic/: aerodynamic.hpp
include/wind_turbine/generator/: generator.hpp  generator_Te.hpp  generator_eq.hpp  generator_lsf.hpp
include/wind_turbine/mechanical/: mechanical.hpp  mechanical_delay.hpp  mechanical_lsf.hpp  mechanical_tdf.hpp
src/: aerodynamic.cpp  battery.cpp  battery_char.cpp  battery_converter.cpp  battery_fre.cpp  battery_voc.cpp  battery_voc.h  city_power_grid.cpp  cti_bus.cpp  environment.cpp  environment.h  generator_Te.cpp  generator_eq.cpp  generator_lsf.cpp  generator_lsf.h  house.cpp  house1.cpp  house2.cpp  house5.cpp  imperial_defs.h  main.cpp  mechanical.cpp  mechanical_delay.cpp  mechanical_lsf.cpp  mechanical_lsf.h  mechanical_tdf.cpp  pv_converter.cpp  pv_panel.cpp  tstep.h  turbine.cpp  wind_inverter.cpp  wind_turbine.cpp
src/battery/: battery.cpp  battery_char.cpp  battery_converter.cpp  battery_fre.cpp  battery_voc.cpp
src/photo_voltaic/: pv_converter.cpp  pv_panel.cpp
src/wind_turbine/: turbine.cpp  wind.cpp  wind_turbine.cpp
src/wind_turbine/aerodynamic/: aerodynamic.cpp
src/wind_turbine/generator/: generator.cpp  generator_Te.cpp  generator_eq.cpp  generator_lsf.cpp
src/wind_turbine/mechanical/: mechanical.cpp  mechanical_delay.cpp  mechanical_lsf.cpp  mechanical_tdf.cpp
work/: 3mins1ms.txt  60s_1ms.txt  Makefile  Makefile.deps  collect_running_time.tcl  one_day_sun.txt  one_day_wind.txt  oneday.txt  oneday_battery.txt  oneday_bs.txt  oneday_load.txt  oneday_pv.txt  oneday_wt.txt  plot_results.py  tim  tim100ms  tim10ms  tim1ms  tim1s  trace.txt  trace1.txt  wt_60s_1ms.txt
